# DD360

./: .gitignore  README.md  pyproject.toml
data/: data_processing.py
data/data_requested/current/: 13092022T17.csv
data/versions/: 12092022T22.csv
